# melina

./: .codexignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.claude/commands/: melina:release.md  release.md
.claude/skills/: melina.md
.github/workflows/: ci.yml  release.yml
crates/melina-cli/: Cargo.toml
crates/melina-cli/src/: main.rs
crates/melina-core/: Cargo.toml
crates/melina-core/src/: classify.rs  discovery.rs  format.rs  git.rs  health.rs  lib.rs  status.rs  teams.rs  tree.rs
crates/melina-tui/: Cargo.toml
crates/melina-tui/src/: main.rs
docs/brainstorms/: 2026-03-15-melina-agent-process-management-brainstorm.md
homebrew/: melina.rb
hooks/: session-end.sh
