[workspace]
resolver = "2"
members = [
    "crates/melina-core",
    "crates/melina-cli",
    "crates/melina-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["vinhnxv"]
license = "MIT"
description = "Claude Code process monitor — track sessions, teammates, MCP servers, and orphans"
repository = "https://github.com/vinhnx/melina"

[workspace.dependencies]
melina-core = { path = "crates/melina-core" }
sysinfo = { version = "0.35", default-features = false, features = ["system"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
git2 = { version = "0.19", default-features = false }
