[package]
name = "melina-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface — one-shot snapshot or watch mode"

[[bin]]
name = "melina-cli"
path = "src/main.rs"

[dependencies]
melina-core.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
sysinfo.workspace = true
